@@ -2,6 +2,8 @@
 Version: 1.3.10
 Date: ????
   Changes:
+    - Update Nullius preset to account for boxed versions of milestones in the "Resources" group (ingots, processors, glass)
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.9
 Date: 2022-10-19
